# Lead-Generator

./: CLAUDE.md
.claude/: settings.json
.claude/commands/: execute.md  feature-new.md  fullworkflow.md  onboard.md  planner.md  pr-comments.md  pr.md  refactor.md  submit.md  tests.md
backend/: .env.example  Dockerfile  QUICKSTART.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_keys.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: contacts.py  discovery.py  health.py  leads.py
backend/app/core/: __init__.py  database.py  llm.py  vector_db.py
backend/app/models/: __init__.py  contact.py  data_source.py  lead.py
backend/app/schemas/: __init__.py  health.py  lead.py
backend/app/services/: __init__.py  apollo.py  enrichment.py  hunter.py  scoring.py
backend/app/utils/: __init__.py  logging.py
backend/tests/: __init__.py  conftest.py  test_apollo_client.py  test_contacts_crud.py  test_discovery_api.py  test_health.py  test_hunter_client.py  test_leads_crud.py  test_scoring.py
docs/ai/: api-endpoints.md  architecture.md  codestructure.md  datamodel.md  integrations.md  technical-debt.md  utilities.md
docs/features/: README.md  _template.md  lead-discovery-engine.md  project-foundation.md
scripts/: fullworkflow.bat  fullworkflow.ps1  fullworkflow.sh
